monitoring/base/alertmanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      # Init container to fix permissions
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.30.1
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          args:
            - '--config.file=/etc/alertmanager/alertmanager.yml'
            - '--storage.path=/alertmanager'
          ports:
            - containerPort: 9093
              name: web
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
            - name: data-volume
              mountPath: /alertmanager
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
        - name: data-volume
          hostPath:
            path: /opt/k8s-data/alertmanager
            type: DirectoryOrCreate
